IMTA-5999 - Update Common libraries
See merge request imports/spring-boot-parent!19