@@ -3,7 +3,7 @@
 
   <groupId>uk.gov.defra.tracesx</groupId>
   <artifactId>spring-boot-parent</artifactId>
-  <version>1.0.15-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>TracesX-Spring-Boot-Parent</name>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.9.RELEASE</version>
+    <version>2.1.9.RELEASE</version>
   </parent>
 
   <distributionManagement>
@@ -31,31 +31,23 @@
   <properties>
     <project.scm.id>gitlab</project.scm.id>
 
-    <java.version>1.8</java.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>11</java.version>
 
-    <tracesx.common.version>1.0.16</tracesx.common.version>
-    <tracesx.common.security.version>1.0.17</tracesx.common.security.version>
-    <tracesx.notification.schema.version>1.0.34</tracesx.notification.schema.version>
+    <tracesx.common.version>2.0.1</tracesx.common.version>
+    <tracesx.common.security.version>2.0.0</tracesx.common.security.version>
+    <tracesx.notification.schema.version>1.0.37</tracesx.notification.schema.version>
 
     <!-- Spring Boot dependency version overrides -->
-    <commons.lang3.version>3.8.1</commons.lang3.version>
     <jackson.version>2.9.10</jackson.version>
-    <lombok.version>1.18.4</lombok.version>
     <netty.version>4.1.42.Final</netty.version>
-    <spring-security.version>5.0.13.RELEASE</spring-security.version>
-    <tomcat.version>8.5.46</tomcat.version>
     <!-- End Spring Boot dependency version overrides -->
 
-    <applicationinsights.version>2.3.1</applicationinsights.version>
-    <azure.springboot.metricsstarter.version>2.1.2</azure.springboot.metricsstarter.version>
-    <azure.applicationinsights.springboot.starter.version>1.1.2</azure.applicationinsights.springboot.starter.version>
+    <applicationinsights.version>2.5.0</applicationinsights.version>
+    <azure.springboot.metricsstarter.version>2.1.7</azure.springboot.metricsstarter.version>
+    <azure.applicationinsights.springboot.starter.version>2.5.0</azure.applicationinsights.springboot.starter.version>
     <commons.beanutils.version>1.9.4</commons.beanutils.version>
     <com.mashape.unirest.version>1.4.9</com.mashape.unirest.version>
-    <equalsverifier.version>2.4.6</equalsverifier.version>
-    <h2.version>1.4.197</h2.version>
+    <equalsverifier.version>2.4.8</equalsverifier.version>
     <io.micrometer.micrometer-core.version>1.1.2</io.micrometer.micrometer-core.version>
     <jacoco.maven.plugin.version>0.8.0</jacoco.maven.plugin.version>
     <jjwt.version>0.10.5</jjwt.version>
@@ -64,17 +56,15 @@
     <junit.jupiter.version>5.0.2</junit.jupiter.version>
     <jwks-rsa.version>0.3.0</jwks-rsa.version>
     <maven.checkstyle.version>3.0.0</maven.checkstyle.version>
-    <maven.failsafe.version>2.20</maven.failsafe.version>
-    <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
-    <mockito.all.version>1.9.5</mockito.all.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+    <mockito.all.version>1.10.19</mockito.all.version>
     <mssql.jdbc.version>7.0.0.jre8</mssql.jdbc.version>
     <neovisionaries.version>1.22</neovisionaries.version>
     <org.everit.json.schema.version>1.9.1</org.everit.json.schema.version>
     <org.owasp.encoder.version>1.2.2</org.owasp.encoder.version>
     <owasp.version>5.2.2</owasp.version>
     <spring.security.jwt.version>1.0.10.RELEASE</spring.security.jwt.version>
-    <surefire.junit4.version>2.20</surefire.junit4.version>
-    <surefire.version>2.20</surefire.version>
+    <surefire.junit4.version>2.22.0</surefire.junit4.version>
     <testng.version>6.14.3</testng.version>
   </properties>
 
@@ -378,7 +368,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.5.3</version>
+          <version>${maven-release-plugin.version}</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <tagNameFormat>@{project.version}-${env.BUILD_NUMBER}</tagNameFormat>
@@ -388,7 +378,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${surefire.version}</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.springframework.boot</groupId>
@@ -411,16 +405,6 @@
                   <profile>local</profile>
                 </profiles>
               </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>2.3</version>
-          <executions>
-            <execution>
-              <phase>none</phase>
             </execution>
           </executions>
         </plugin>
@@ -486,7 +470,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>${maven.resources.plugin.version}</version>
           <configuration>
             <useDefaultDelimiters>true</useDefaultDelimiters>
           </configuration>
@@ -494,8 +477,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${maven.failsafe.version}</version>
           <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
             <includes>
               <include>**/*IT.java</include>
             </includes>
@@ -545,6 +530,10 @@
       <plugin>
         <groupId>org.owasp</groupId>
         <artifactId>dependency-check-maven</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
